<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="325dp"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/dialog_rounded_background">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/dialog_close_btn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_close"
        android:scaleType="centerInside"
        android:contentDescription="닫기"
        app:tint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"/>


    <TextView
        android:id="@+id/dialog_agreement_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="개인정보 이용 및 활용 동의"
        android:textSize="17dp"
        android:textColor="@color/black"
        android:fontFamily="@font/suit_bold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <android.widget.Button
        android:id="@+id/dialog_agreement_accept_btn"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:text="동의"
        android:textColor="@color/b500"
        android:textSize="13dp"
        android:textFontWeight="600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/agreement_content_sv"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/normal_login_edittext_corner_rectangle"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/dialog_agreement_accept_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_agreement_title_tv">



        <LinearLayout
            android:id="@+id/dialog_agreement_body_tv"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@+id/agreement_content_sv">

            <!-- 제1조 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agreement_title01_text"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="3dp"
                android:paddingLeft="30dp"
                android:paddingTop="8dp"
                android:text="@string/agreement_body01_text"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="12dp" />

            <!-- 제2조 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agreement_title02_text"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="3dp"
                android:paddingLeft="30dp"
                android:paddingTop="8dp"
                android:text="@string/agreement_body02_text"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="12dp" />

            <!-- 제3조 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agreement_title03_text"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="3dp"
                android:paddingLeft="30dp"
                android:paddingTop="8dp"
                android:text="@string/agreement_body03_text"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="12dp" />

            <!-- 제4조 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agreement_title04_text"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="3dp"
                android:paddingLeft="30dp"
                android:paddingTop="8dp"
                android:text="@string/agreement_body04_text"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="12dp" />

            <!-- 제5조 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agreement_title05_text"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:paddingLeft="30dp"
                android:paddingTop="8dp"
                android:text="@string/agreement_body05_text"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="12dp" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>